fix raker overlapping button

--- a/_sass/_slide-seven.sass
+++ b/_sass/_slide-seven.sass
@@ -60,9 +60,10 @@
         display: block
         position: absolute
         height: 90%
-        left: -30vw
+        left: 0vw
         bottom: -2px
         top: auto
+        width: auto
 
       .plant_A
         width: 6vw
